--- a/_posts/2025-01-07-AB-testing2.md
+++ b/_posts/2025-01-07-AB-testing2.md
@@ -20,9 +20,14 @@ The workflow for A/B testing with t-test is similar to that for A/B testing with
 
 #### 🎯 Problem Setup
 
+Suppose you're testing a new product layout, and your metric of interest is average time on page. You have:
+
+- Group A (control): current layout
+- Group B (variant): new layout
+
 Suppose: 
-- $$p_A$$ is the true conversion rate in A
-- $$p_B$$ is the true conversion rate in B
+- $$\mu_A$$ is the true average time on page in A
+- $$\mu_B$$ is the true average time on page in B
 
 ### 🧪 When and Why to Use the t-Test in A/B Testing
 
