--- a/_posts/2025-01-07-AB-testing2.md
+++ b/_posts/2025-01-07-AB-testing2.md
@@ -29,6 +29,79 @@ Suppose:
 - $$\mu_A$$ is the true average time on page in A
 - $$\mu_B$$ is the true average time on page in B
 
+These are unknown parameters we are trying to make inferences about using sample data:
+
+- Group A has $$n_A$$ users with average time on page $$\bar{mu}_A$$ and standard deviation $$s_A$$
+- Group B has $$n_B$$ users with average time on page $$\bar{mu}_B$$ and standard deviation $$s_B$$
+
+We use $$\bar{\mu}_A$$ and $$\bar{\mu}_B$$ to estimate $$\mu_A$$ and $$\mu_B$$. We also use hypothesis testing to decide if the difference in the observed average times on page is statistically significant.
+
+🔍 Step 1: Define Hypotheses
+
+- Null hypothesis $$H_0$$: No difference in the average time on page, i.e.,
+
+$$H_0: \mu_A = \mu_B$$ 
+
+- Alternative hypothesis $$H_1$$: Variant B performs differently, i.e.,
+
+$$H_1: \mu_A \neq \mu_B \,\, \text{(two-sided test)}$$
+
+or if B is better, i.e.,
+
+$$H_1: \mu_B > \mu_A \,\, \text{(one-sided test)}$$
+
+⚙️ Step 2: Estimated Standard Error (SE) Under $$H_0$$ (for equal variances)
+
+SE is a measure of the uncertainty or variability in the difference between two observed conversion rates $$\hat{p}_A$$ and $$\hat{p}_B$$. It tells you how much the observed difference between groups A and B might vary just due to random sampling. 
+
+In simple terms, SE tells you how much "wiggle room" you should expect in your A/B test results — even if there were actually no real difference in the true conversion rates of A and B.
+
+The true SE for the difference in the observed conversion rates under $$H_0$$ is:
+
+$$\text{SE} = \sqrt{p(1 - p)\Big(\frac{1}{n_A} + \frac{1}{n_B}\Big)}$$
+
+(This expression will be explained at the end of the post)
+
+However, this true SE is only theoretical because $$p$$ is unknown. 
+
+Instead, the estimated SE for the difference in the observed conversion rates is computed using the estimate $$\hat{p}$$ of $$p$$:
+
+$$\text{SE} = \sqrt{\frac{s_A^2}{n_A} + \frac{s_B^2}{n_B}}$$
+
+🧮 Step 3: T-Statistic Under $$H_0$$
+
+The z-score tells us how far the difference of the observed conversion rates we see is from zero, using standard error as the unit, assuming that $$H_0$$ is true:
+
+$$t = \frac{\bar{\mu}_B - \bar{\mu}_A}{\text{SE}}$$
+
+So, 
+- If $$t$$ is close to 0, the observed difference is what we'd expect from random chance
+- If $$t$$ is far from 0, the difference is larger than what we'd expect from chance, so it might be statistically significant
+
+📉 Step 4: Compute P-Value Under $$H_0$$
+
+Just knowing "how many standard errors away" from the computed z-score is isn't enough — we want to **quantify how likely** it is to observe such a result by chance. 
+
+To do this, given the z-score formula above, we transform it into the standard normal scale — a distribution with: Mean = 0, Standard deviation = 1, Symmetrical bell shape. 
+
+If the sample size is large, the Central Limit Theorem tells us that the difference $$\hat{p}_B - \hat{p}_A$$ (appropriately normalized) follows an approximately normal distribution — so the z-score follows the standard normal distribution.
+
+We use the z-score to find a p-value from the standard normal distribution. 
+
+The p-value answers this question: "If the null hypothesis $$H_0$$ is true, what is the probability of seeing a result this extreme or more extreme just by chance?"
+
+Mathematically, p-value is the area under the curve of the standard normal distribution beyond your z-score.
+
+- For a two-tailed test:
+
+$$p_{value} = 2 (1 - \Phi(|z|))$$
+
+- For a one-tailed test:
+
+$$p_{value} = 1 - \Phi(|z|)$$
+
+where $$\Phi (z)$$ is the cumulative distribution function (CDF) of the standard normal distribution.
+
 ### 🧪 When and Why to Use the t-Test in A/B Testing
 
 ✅ Use the t-test when:
