--- a/_posts/2025-01-07-AB-testing2.md
+++ b/_posts/2025-01-07-AB-testing2.md
@@ -136,11 +136,11 @@ print(f"p-value: {p_value:.4f}")
 Output:
 
 ```bash
-t-statistic: 4.0587
-p-value: 0.0024
+t-statistic: 4.9736
+p-value: 0.0011
 ```
 
-With a p-value of 0.0024, we reject the null hypothesis and conclude that Group B performs significantly better.
+With a p-value of 0.0011 significantly smaller than 0.05, we reject the null hypothesis and conclude that Group B performs significantly better.
 
 ### 🧪 When and Why to Use the t-Test in A/B Testing
 
