--- a/_posts/2025-01-07-AB-testing2.md
+++ b/_posts/2025-01-07-AB-testing2.md
@@ -10,7 +10,7 @@ In a previous [post](https://thanhtungvudata.github.io/data%20science%20fundamen
 
 The answer is yes — but you need to switch tools. In this post, we'll dive into how to perform A/B testing using the t-test, the theory behind, and why it's the right approach when your data is limited.
 
-<img src="/assets/images/AB_testing_overview.png" alt="AB Testing" width="600">
+<img src="/assets/images/AB_testing_t_test.png" alt="AB Testing T-Test" width="600">
 
 ### Workflow for A/B testing with t-Test
 
