--- a/_posts/2025-01-07-AB-testing3.md
+++ b/_posts/2025-01-07-AB-testing3.md
@@ -146,31 +146,48 @@ If the sample sizes are small, we can calculate the p-value by using the exact d
 Let’s simulate a basic A/B test for the average time on page.
 
 ```python
-from scipy.stats import ttest_ind
+import numpy as np
+from scipy.stats import mannwhitneyu
+import matplotlib.pyplot as plt
 
-# Simulated time-on-page data (in seconds)
-group_A = [120, 130, 115, 123, 140]
-group_B = [150, 160, 145, 155, 170]
+# Simulated skewed data (e.g., log-normal)
+np.random.seed(42)
+group_A = np.random.lognormal(mean=2.0, sigma=1.0, size=100)
+group_B = np.random.lognormal(mean=2.3, sigma=1.0, size=100)
 
-# Welch's t-test (does not assume equal variances)
-t_stat, p_value = ttest_ind(group_B, group_A, equal_var=False)
+# Visualize the distributions
+plt.hist(group_A, bins=30, alpha=0.6, label='Group A')
+plt.hist(group_B, bins=30, alpha=0.6, label='Group B')
+plt.legend()
+plt.title("Session Duration Distributions")
+plt.xlabel("Duration (seconds)")
+plt.ylabel("Frequency")
+plt.show()
 
-print(f"t-statistic: {t_stat:.4f}")
-print(f"p-value: {p_value:.4f}")
+# Run Mann–Whitney U test (two-sided)
+stat, p = mannwhitneyu(group_A, group_B, alternative='less')
+
+print(f"P-value: {p:.4f}")
 ```
 
 Output:
 
+<img src="/assets/images/AB_testing_mwu_test_sample_distribution.png" alt="AB Testing MWU-Test Sample Distribution" width="600">
+
 ```bash
-t-statistic: 4.9736
-p-value: 0.0011
+P-value: 0.0023
 ```
 
-With a p-value of 0.0011 significantly smaller than 0.05, we reject the null hypothesis and conclude that Group B performs significantly better.
+With a p-value of 0.0023 significantly smaller than 0.05, we reject the null hypothesis and conclude that Group B performs significantly better.
 
 
 ## Summary
-The t-test is a powerful tool for A/B testing when your sample size is small and you’re comparing means. It accounts for the added uncertainty in small datasets, allowing you to make data-informed decisions — even when data is limited.
+The Mann–Whitney U test is a powerful and reliable method for A/B testing when your data is not normally distributed or is heavily skewed.
+
+Use it when:
+- Your metric has outliers
+- The sample size is not large enough to rely on the CLT
+- You want to compare medians or distributional shifts instead of means
 
 ---
 🚀 The code of the example is available [here](https://github.com/thanhtungvudata/Data_Science_Fundamentals). 
